# slam

./: .dir-locals.el  .gitmodules  CMakeLists.txt
.github/workflows/: docker-image.yml
cmake/: utility.cmake
docker/: Dockerfile  Dockerfile.orbslam  build_docker.sh  docker-compose.yml  entrypoint.sh
ext/: CMakeLists.txt  build.sh
include/: slam.hpp
include/debug/: debug.hpp  viewer.hpp
include/extension/: imgui_impl_pangolin.h
snippets/: CMakeLists.txt
snippets/debug/: viewer_test.cpp
snippets/feat/: orb.cpp
snippets/g2o/: test_g2o.cpp
snippets/pangolin/: pangolin_test.cpp
snippets/pangolin/shader/: simple.frag  simple.vert
snippets/pcl/: test_matrix_transform.cpp
src/: CMakeLists.txt  slam.hpp
src/debug/: camera_matrix.hpp  custom_format.hpp  data.hpp  debug.hpp  plugin.hpp  shader.hpp  viewer.cpp  viewer.hpp
src/debug/plugin/: simple_plugin.hpp
src/debug/shader/: simple_image.hpp  simple_point_cloud.hpp
src/extension/: extension.hpp  imgui_impl_pangolin.cpp  imgui_impl_pangolin.h
